# Smart_BMS

./: --- Smart BMS - Charging Time Predi.txt  BattMGMT.cpp  CMakeLists.txt  README.md  battery_charge_predictor.onnx  cleaned_battery_dataset.csv  main.cpp  model.py
